Update job-list-item, job-map-marker, slider, job-details and home component to use formatted numbers returned from the API

--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -4,7 +4,7 @@
         <div class="job-name"><div>
           {{job.name}}
         </div></div>
-        <div class="salary-container">{{job.hourlyPay.grossSalary * job.hours}} {{job.hourlyPay.currency}}</div>
+        <div class="salary-container">{{job.grossAmountWithCurrency}}</div>
       </div>
   </div>
 </div>
