--- a/src/app/components/job-list-item/job-list-item.component.html
+++ b/src/app/components/job-list-item/job-list-item.component.html
@@ -6,9 +6,9 @@
 
   <div class="row">
     <div class="col-xs-8">
-      <span class="total-salary">{{job.grossAmount}} {{job.hourlyPay.currency}}</span>
+      <span class="total-salary">{{job.grossAmountWithCurrency}}</span>
       <span class="salary-per-hour">
-        {{job.hours}}h ({{job.hourlyPay.grossSalary}} {{job.hourlyPay.currency}}/h)
+        {{job.hours}}h ({{job.hourlyPay.grossSalaryWithUnit}})
       </span>
     </div>
 
