--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="home-job-item-salary-container">
-          {{job.hourlyPay.grossSalary * job.hours}} {{job.hourlyPay.currency}}
+          {{job.grossAmountWithCurrency }}
         </div>
       </div>
     </div>
