--- a/src/app/views/job-details/job-details.component.html
+++ b/src/app/views/job-details/job-details.component.html
@@ -13,7 +13,7 @@
             <h4 class="job-status-text">{{job.company.name}}</h4>
             <h6 class="job-status-text">{{job.jobDate | date: 'MMM dd'}} - {{job.jobEndDate | date: 'MMM dd'}}</h6>
             <h6 class="job-status-text">{{job.street}}</h6>
-            <h2 class="job-status-salary-text">{{job.grossAmount}} {{job.currency}}</h2>
+            <h2 class="job-status-salary-text">{{job.grossAmountWithCurrency}}</h2>
           </div>
           <div class="col-xs-5 job-status-icon-container">
             <img [src]="job.companyLogoURL" class="company-logo">
@@ -68,8 +68,8 @@
       <div class="row job-preview-row">
         <div class="col-xs-1"></div>
         <div class="col-xs-11">
-          <p class="job-preview-text">{{job.hours}} {{'assignment.hours' | translate}} ({{job.hourlyPay.grossSalary}} {{job.hourlyPay.currency}}/{{'assignment.hour' | translate | lowercase}}) {{'assignment.rate.gross_salary' | translate}}<br/>
-          {{job.netAmount}} {{job.hourlyPay.currency}} {{'assignment.after_tax' | translate}}</p>
+          <p class="job-preview-text">{{job.hours}} {{'assignment.hours' | translate}} ({{job.hourlyPay.grossSalaryWithUnit}} {{'assignment.rate.gross_salary' | translate}})<br/>
+          {{job.netAmountWithCurrency}} {{'assignment.after_tax' | translate}}</p>
           <hr class="job-details-separator"/>
         </div>
       </div>
