Design touchup of moving comment box

--- a/src/app/components/comments/comments.component.scss
+++ b/src/app/components/comments/comments.component.scss
@@ -80,7 +80,7 @@
     left: 50%;
     transform: translate(-50%, 0);
     bottom: 0;
-    box-shadow: 0 -1px 10px -3px #333;
+    border-top: thin solid $color-gray-50;
     margin-bottom: 0;
   }
 
@@ -99,6 +99,11 @@
       border: 1px solid $color-gray-100;
       padding: 10px;
       word-break: break-all;
+      outline: none;
+
+      &:focus {
+        border: 1px solid $color-gray-300;
+      }
     }
   }
 
