--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -18,7 +18,7 @@
           {{comment.owner.company.name}}
         </div>
         <div class="comment-meta-data-date">
-          {{comment.createdAt | date:'yyyy-MM-dd HH:mm'}}
+          {{comment.createdAt | date:'yMdjm'}}
         </div>
       </div>
       <div class="comment-body">{{comment.body}}</div>
