--- a/src/app/views/job-details/job-details.component.scss
+++ b/src/app/views/job-details/job-details.component.scss
@@ -22,7 +22,7 @@
   max-width: 600px;
   padding-left: 10px;
   padding-right: 10px;
-  margin-top: 10px;
+  margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
   background-color: $default-bg-color;
@@ -33,6 +33,7 @@
 }
 
 .job-title {
+  text-align: center;
   margin-top: 5px;
   margin-bottom: 0px;
 }
