Refactor forgot-password.component to use new ApiErrors

--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -8,11 +8,11 @@
 
     <form [formGroup]="forgotPasswordForm" (ngSubmit)="submitForm(forgotPasswordForm.value)">
       <div class="form-group material-group forgot-password-input-container" [ngClass]="{'has-error':!forgotPasswordForm.controls['email_or_phone'].valid && forgotPasswordForm.controls['email_or_phone'].touched}">
-        <input maxlength="256" (keyup.enter)="onEnterKeyUp()" (focus)="errors.email_or_phone = ''" class="forgot-password-form-text-input form-control material-input fs-m0" type="text" placeholder="{{'forgot.password.form.email.or.phone.placeholder' | translate}}"
+        <input maxlength="256" (keyup.enter)="onEnterKeyUp()" class="forgot-password-form-text-input form-control material-input fs-m0" type="text" placeholder="{{'forgot.password.form.email.or.phone.placeholder' | translate}}"
             [formControl]="forgotPasswordForm.controls['email_or_phone']">
 
         <div *ngIf="forgotPasswordForm.controls['email_or_phone'].hasError('required') && forgotPasswordForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'forgot.password.form.email.or.phone.validation.required' | translate}}</div>
-        <div *ngIf="errors.email_or_phone" class="alert alert-danger">{{errors.email_or_phone}}</div>
+        <div *ngFor="let error of apiErrors.errorsFor('email_or_phone')" class="alert alert-danger">{{error.detail}}</div>
       </div>
       <div class="form-group forgot-password-form-button-container">
         <div *ngIf="displayErrorMessage" class="error-message fs-m0">{{'forgot.password.submit.error' | translate}}</div>
